--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,13 +7,12 @@ body {
   margin: 0 auto;
   padding: 0;
   text-decoration: none;
+  overflow-x: hidden;
 }
-
-body { overflow-x: hidden; }
 
 body * { outline: 0; }
 
-body *:focus { outline: solid red 2px; }
+body *:focus { outline: solid red 3px; }
 
 
 h1 { font-size: 46px; }
@@ -28,7 +27,6 @@ header {
   display: flex;
   height: 90px;
   justify-content: space-between; 
-  padding: 0 20px;
 }
 
 header .home-link { height: 95px; }
@@ -41,7 +39,7 @@ header img { width: 150px; }
   border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 12px;
   margin-bottom: 2px;
   padding: 3px;
   transform: rotate(45deg);
@@ -53,7 +51,8 @@ header img { width: 150px; }
   border: 2px solid black;
   border-radius: 8px;
   font-size: 16px;
-  min-width: 200px;
+  font-weight: 900;
+  min-width: 220px;
   padding: 10px 50px;
 }
 
@@ -67,10 +66,11 @@ header img { width: 150px; }
   background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   display: block;
+  font-weight: 900;
   position: absolute;
   top: -1000px;
   opacity: 1;
-  min-width: 200px;
+  min-width: 220px;
   position: absolute;
   z-index: 1;
 }
@@ -93,28 +93,56 @@ header img { width: 150px; }
 
 .dropdown:hover .dropdown-content,
 .dropdownbtn:focus + .dropdown-content,
-.dropdown-content:has(a:focus) { top: 41px; }
+.dropdown-content:has( *:focus) { top: 41px; }
 /*Nav Dropdown*/
+
+/*Hamburger Menu*/
+.burger-menu{
+  padding: 5px;
+  margin-left: 0;
+}
+
+.fa-bars{ display: block; }
+
+.burger-contents {
+  background-color: white;
+  border: solid black 2px;
+  display: none;
+  font-weight: 900;
+  position: absolute;
+  right: 22px;
+  top: 43px;
+  width: 200px;
+}
+
+.burger-contents a {
+  border: solid black 1px;
+  color: black;
+  display: block;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+}
+/*Hamburger Menu*/
 
 nav ul {
   display: flex;
-  list-style-type: none;
   gap: 20px;
+  list-style-type: none;
 }
 
 nav li { margin-right: 20px; }
 
 nav i { font-size: 20px; }
 
+.fa-user{ margin-top: 7px; }
+
 footer {
+  border: 1px solid black;
   font-size: 15px;
   padding: 0px;
   text-align: center;
   width: 100%;
-  border: 1px solid black;
-
- 
-  
 }
 
 /***************************************************
@@ -130,58 +158,47 @@ footer {
   text-align: center;
 }
 
-
 .employee-info{
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
 }
 
-.separator {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-}
-
 .sign-in-button {
   background-color: #333; 
-  color: #fff;
-  padding: 10px 20px; 
-  font-size: 24px; 
   border: none;
-  cursor: pointer;
   border-radius: 5px;
-  
+  color: #fff;
+  cursor: pointer;
+  font-size: 24px; 
+  padding: 10px 20px; 
+  margin: 8px auto;
+  width: 80px;
 }
 
-.sign-in-button:hover {
-  background-color: #555; 
-}
+.sign-in-button:hover { background-color: #555; }
 
-.employee-info li{
-  list-style-type: none;
-}
+.employee-info li{ list-style-type: none; }
 
 .third-section {
   border-top: 3px solid #000000;
   border-bottom: 2px solid #000000;
   display: flex;
- height: 500px;
+  height: 400px;
   justify-content: space-around;
 } 
 
 .third-section div {
   border: solid rgba(0, 0, 0, 0.815) 5px;
   border-radius: 10%;
-  padding: 20px;
   margin: 20px 0;
+  max-height: 120px;
+  margin-top: 90px;
   min-width: 130px;
-max-height: 120px;
-margin-top: 90px;
+  padding: 20px;
 }
 
-.third-section div i {
-  margin-left: 45px;
-}
+.third-section div i { margin-left: 45px; }
 
 
 .third-section-icon {
@@ -191,9 +208,10 @@ margin-top: 90px;
   width: auto;
 }
 
-.icon-large, .second-icon-large {
-  font-size: 3.5em; 
-}
+.third-section-icon:hover { color: #5e5e5e;}
+
+.icon-large, 
+.second-icon-large { font-size: 3.5em; }
 /***************************************************
               HOME PAGE ENDS HERE
 ***************************************************/
@@ -203,31 +221,40 @@ margin-top: 90px;
               CUSTOMER CREATE PAGE
 ***************************************************/
 
-#form-wrapper{
-  background: linear-gradient(rgba(0, 0, 0, 0.692), rgba(0, 0, 0, 0.842)), 
-  center/cover;
-}
-
-#form-wrapper label {
-	color: #FFF;
+label {
+	color: #000000;
 	font-size: 16px;
 }
 
 .main-form{
-  background-color: #232b2b; 
-  padding: 60px 0;
+  background-color: #f5f5f5; 
   margin: 0 auto;
+  padding: 60px 0;
   width: 60%;
 }
 
 .col {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 5px;
+  grid-template-columns: 1fr 1fr;
   margin-left: 20px;
   text-align: left;
 }
 
+fieldset {
+  border-color: #000000;
+  border-radius: 5px;
+  border-style: solid;
+  margin-bottom: 32px;
+  padding-bottom: 15px;
+  padding-top: 30px;
+}
+
+legend {
+color: #000000;
+font-size: 24px;
+font-weight: 600;
+}
 
 .form-group {
 	margin-bottom: 20px;
@@ -255,7 +282,7 @@ margin-top: 90px;
   
 .form-group .label-name {
 	bottom: 0;
-	color: #999;
+	color: #000000;
 	font-size: 16px;
 	left: 0;
 	position: absolute;
@@ -268,12 +295,12 @@ input[type="email"],
 input[type="tel"],
 input[type="button"],
 select {
-  display: block;
-  border: 1px solid #FFF;
-  height: 30px;
-  width: 200px;
+  border: 1px solid #000000;
   border-radius: 5px;
+  display: block;
+  height: 30px;
 	margin: 10px 0;
+  width: 200px;
 }
 
 #btn{ margin: 20px auto; }
@@ -281,8 +308,8 @@ select {
 .form-group input:focus + .label-name,
 .form-group input:valid + .label-name {
 	color: #333;
-	transform: translateY(-20px);
 	font-size: 14px;
+	transform: translateY(-20px);
 }
   
 .submit {
@@ -295,9 +322,12 @@ select {
 	padding: 9px 20px;
 }
   
-.submit:hover {
-	background: #555;
-}
+.submit:hover { background: #555; }
+
+
+/***************************************************
+          CUSTOMER CREATE PAGE ENDS HERE
+***************************************************/
 
 /*************************************************
           LOGIN SECTION
@@ -306,57 +336,56 @@ select {
 
 
 .body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0; /* Light gray background */
-  display: flex;
   align-items: center;
-  justify-content: center;
+  background-color: #f0f0f0;
+  display: flex;
   height: 100vh;
+  justify-content: center;
   margin: 0;
 }
 .login-container {
-  /*max-width: 300px;*/
-  padding: 20px;
-  border: 1px solid #3498db; /* Border color */
+  background-color: #fff;
+  border: 1px solid #3498db;
   border-radius: 10px;
-
-  background-color: #fff; /* White background */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 300px;
   margin: 150px auto;
-  height: 500px;
+  padding: 20px;
   width: 40%;
 }
 .login-container h2 {
+  color: #333; /* Text color */
   margin-bottom: 20px;
   text-align: center;
-  color: #333; /* Text color */
 }
 .login-container input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-}
-.login-container button {
+  margin-bottom: 15px;
+  padding: 10px;
   width: 100%;
-  padding: 12px;
-  background-color: black; /* Button color */
-  color: #fff; /* Button text color */
+}
+
+.login-container a {
+  background-color: black;
   border: none;
   border-radius: 5px;
+  color: #fff;
   cursor: pointer;
+  display: block;
   font-size: 16px;
+  margin: 0 auto;
+  padding: 12px;
+  text-align: center;
+  width: 80px;
 }
-.login-container button:hover {
-  background-color: #2980b9; /* Darker button color on hover */
-}
-/***************************************************
-          CUSTOMER CREATE PAGE ENDS HERE
-***************************************************/
 
+.login-container a:hover { background-color: #4b4b4b; }
 
+/*************************************************
+          LOGIN SECTION ENDS HERE
+*************************************************/
 
 .icons {
 position: absolute;
@@ -375,34 +404,12 @@ margin-top: 30px;
 
 #text {
   margin-left: 130px;
-  
   width: 600px;
 }
 
-select {
-  border: none;
-  font-size: 17px;
-  width: 170px;
-  appearance: none; 
-  background-image: none;
-}
 
 
-fieldset {
-    border-color: #FFF;
-    border-radius: 5px;
-    border-style: solid;
-    margin-bottom: 32px;
-    padding-bottom: 15px;
-    padding-top: 30px;
-}
 
-legend {
-  font-size: 24px;
-  font-weight: 600;
-	color: #FFF;
-
-}
 
 
 .city button[type="button"]
@@ -417,10 +424,9 @@ legend {
   padding: 10px 30px;
 }
 
-.city button[type="button"],
-input[type="submit"]:hover {
-  background: gray;
-  color: #fff;
+
+.city button[type="button"]:hover{
+  background-color: #6e6e6e;
 }
 
 input[type="file"] {
