--- a/Prototype-main/CSS/style.css
+++ b/Prototype-main/CSS/style.css
@@ -387,6 +387,17 @@ select {
           LOGIN SECTION ENDS HERE
 *************************************************/
 
+/***************************************************
+                    BUTTON
+***************************************************/
+
+
+/***************************************************
+                    BUTTON
+***************************************************/
+
+
+
 .icons {
 position: absolute;
 left: 1730px;
