Site before repair details added.
this version of the site has mostly been finalized, with the exception of the details page, and the validation of some of the pages.

But it should have:
- a functional help button
- a search feature
- repairs list page
-repairs request page

Please try downloading this tomorrow or Wednesday to see if it's the right version and that everything works properly.
<3

--- a/Prototype-main/CSS/style.css
+++ b/Prototype-main/CSS/style.css
@@ -10,13 +10,21 @@ body {
   overflow-x: hidden;
 }
 
-body * { outline: 0; }
+body * {
+  outline: 0;
+}
 
-body *:focus { outline: solid red 3px; }
+body *:focus {
+  outline: solid rgb(60, 122, 255) 4px;
+}
 
-h1 { font-size: 46px; }
+h1 {
+  font-size: 46px;
+}
 
-p { font-size: 30px; }
+p {
+  font-size: 30px;
+}
 
 header {
   align-items: center;
@@ -25,12 +33,16 @@ header {
   border-bottom: 3px solid black;
   display: flex;
   height: 90px;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
-header .home-link { height: 95px; }
+header .home-link {
+  height: 95px;
+}
 
-header img { width: 150px; }
+header img {
+  width: 150px;
+}
 
 /*Nav Dropdown*/
 .nav-arrow {
@@ -52,7 +64,7 @@ header img { width: 150px; }
   font-weight: 900;
   min-width: 220px;
   padding: 10px 50px;
-  
+
 }
 
 .dropdown {
@@ -64,7 +76,7 @@ header img { width: 150px; }
 
 .dropdown-content {
   background-color: #f1f1f1;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   display: block;
   font-weight: 900;
   min-width: 220px;
@@ -75,45 +87,63 @@ header img { width: 150px; }
 
 /* Default style for the "Customers" button */
 .dropdownbtn {
-  background-color: #fff; /* Default background color */
-  color: #000; /* Default text color */
+  background-color: #fff;
+  /* Default background color */
+  color: #000;
+  /* Default text color */
 }
 
 /* Highlight style for the "Customers" button */
 .dropdownbtn .active {
-  background-color: #ff0000; /* Red background when active */
-  color: #fff; /* White text color when active */
+  background-color: #ff0000;
+  /* Red background when active */
+  color: #fff;
+  /* White text color when active */
 }
 
 .dropdown-content a {
   color: black;
   display: block;
   padding: 12px 16px;
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 .dropdown-content a:hover,
-.dropdown-content a:focus { background-color: #ddd; }
+.dropdown-content a:focus {
+  background-color: #ddd;
+}
 
-.dropdownbtn:hover { background-color: rgb(230, 230, 230); }
+.dropdownbtn:hover {
+  background-color: rgb(230, 230, 230);
+}
 
 .dropdownbtn:hover .nav-arrow,
-.dropdownbtn:focus .nav-arrow { transform: rotate(45deg); }
+.dropdownbtn:focus .nav-arrow {
+  transform: rotate(45deg);
+}
 
 .dropdown:hover .dropdown-content,
-.dropdownbtn:focus + .dropdown-content,
-.dropdown-content:has( *:focus) { top: 41px; }
+.dropdownbtn:focus+.dropdown-content,
+.dropdown-content:has(*:focus) {
+  top: 41px;
+}
+
 /*Nav Dropdown*/
 
-.fa-user {color: #000;}
+.fa-user {
+  color: #000;
+  font-size: 26px;
+}
 
 /*Hamburger Menu*/
-.burger-menu{
+.burger-menu {
   margin-left: 0;
   padding: 5px;
 }
 
-.fa-bars{ display: block; }
+.fa-bars {
+  display: block;
+}
 
 .burger-contents {
   background-color: white;
@@ -135,6 +165,7 @@ header img { width: 150px; }
   text-align: center;
   text-decoration: none;
 }
+
 /*Hamburger Menu*/
 
 nav ul {
@@ -143,11 +174,17 @@ nav ul {
   list-style-type: none;
 }
 
-nav li { margin-right: 20px; }
+nav li {
+  margin-right: 20px;
+}
 
-nav i { font-size: 20px; }
+nav i {
+  font-size: 20px;
+}
 
-.fa-user { margin-top: 7px; }
+.fa-user {
+  margin-top: 7px;
+}
 
 footer {
   border: 1px solid black;
@@ -157,6 +194,10 @@ footer {
   width: 100%;
 }
 
+textarea {
+  resize: none;
+}
+
 /***************************************************
               TEMPLATE ENDS HERE
 ***************************************************/
@@ -164,33 +205,37 @@ footer {
 /***************************************************
                     HOME PAGE
 ***************************************************/
-.homepage-sign-in{
+.homepage-sign-in {
   display: grid;
   grid-template-columns: 1fr;
   text-align: center;
 }
 
-.employee-info{
+.employee-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
 }
 
 .sign-in-button {
-  background-color: #333; 
+  background-color: #333;
   border: none;
   border-radius: 5px;
   color: #fff;
   cursor: pointer;
-  font-size: 24px; 
+  font-size: 24px;
   margin: 8px auto;
-  padding: 10px 20px; 
+  padding: 10px 20px;
   width: 80px;
 }
 
-.sign-in-button:hover { background-color: #555; }
+.sign-in-button:hover {
+  background-color: #555;
+}
 
-.employee-info li{ list-style-type: none; }
+.employee-info li {
+  list-style-type: none;
+}
 
 .third-section {
   border-top: 3px solid #000000;
@@ -198,7 +243,7 @@ footer {
   display: flex;
   height: 400px;
   justify-content: space-around;
-} 
+}
 
 .third-section div {
   border: solid rgba(0, 0, 0, 0.815) 5px;
@@ -210,19 +255,26 @@ footer {
   padding: 20px;
 }
 
-.third-section div i { margin-left: 45px; }
+.third-section div i {
+  margin-left: 45px;
+}
 
 .third-section-icon {
   color: rgb(0, 0, 0);
-  display: inline-block;  
-  height: auto;  
+  display: inline-block;
+  height: auto;
   width: auto;
 }
 
-.third-section-icon:hover { color: #5e5e5e;}
+.third-section-icon:hover {
+  color: #5e5e5e;
+}
 
-.icon-large, 
-.second-icon-large { font-size: 3.5em; }
+.icon-large,
+.second-icon-large {
+  font-size: 3.5em;
+}
+
 /***************************************************
               HOME PAGE ENDS HERE
 ***************************************************/
@@ -231,18 +283,24 @@ footer {
           CUSTOMER & EQUIPMENT CREATE PAGE
 ***************************************************/
 label {
-	color: #000000;
-	font-size: 16px;
+  color: #000000;
+  font-size: 16px;
 }
 
-.main-form{
-  background-color: #f5f5f5; 
+.main-form {
+  background-color: #f5f5f5;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 10px 0;
+
   width: 70%;
+
 }
 
-
+.collapse {
+  height: 0;
+  overflow:hidden;
+  transition: 0.3s;
+}
 
 .col {
   display: grid;
@@ -253,7 +311,9 @@ label {
   height: 60px;
 }
 
-.txtBox { margin-left: 50px; }
+.txtBox {
+  margin-left: 50px;
+}
 
 fieldset {
   border-color: #000000;
@@ -263,42 +323,42 @@ fieldset {
 }
 
 legend {
-color: #000000;
-font-size: 24px;
-font-weight: 600;
+  color: #000000;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .form-group {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
   margin-top: 20px;
-	position: relative;
+  position: relative;
   right: 70px;
 }
-  
+
 .form-group input {
-	background: transparent;
-	border: none;
-	border-bottom: 1px solid #CCC;
-	font-size: 16px;
-	height: 40px;
-	padding: 5px 0;
-	outline: none;
-	transition: all 0.3s ease;
-	width: 100%;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #CCC;
+  font-size: 16px;
+  height: 40px;
+  padding: 5px 0;
+  outline: none;
+  transition: all 0.3s ease;
+  width: 100%;
 }
-  
+
 .form-group input:focus {
-	border-color: #A31521;
-	outline: none;
+  border-color: #A31521;
+  outline: none;
 }
-  
+
 form label {
-	bottom: 0;
-	color: #000000;
+  bottom: 0;
+  color: #000000;
   display: block;
-	font-size: 16px;
-	pointer-events: none;
-	transition: all 0.3s ease;
+  font-size: 16px;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
 
 input[type="text"],
@@ -310,15 +370,15 @@ select {
   border-radius: 5px;
   display: inline-block;
   height: 30px;
-	margin: 10px 0;
+  margin: 10px 0;
   width: 200px;
 }
 
-.form-group input:focus + .label-name,
-.form-group input:valid + .label-name {
-	color: #333;
-	font-size: 14px;
-	transform: translateY(-20px);
+.form-group input:focus+.label-name,
+.form-group input:valid+.label-name {
+  color: #333;
+  font-size: 14px;
+  transform: translateY(-20px);
 }
 
 /***************************************************
@@ -337,6 +397,7 @@ select {
   justify-content: center;
   margin: 0;
 }
+
 .login-container {
   background-color: #fff;
   border: 1px solid #3498db;
@@ -347,11 +408,14 @@ select {
   padding: 20px;
   width: 40%;
 }
+
 .login-container h2 {
-  color: #333; /* Text color */
+  color: #333;
+  /* Text color */
   margin-bottom: 20px;
   text-align: center;
 }
+
 .login-container input {
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -375,7 +439,9 @@ select {
   width: 80px;
 }
 
-.login-container a:hover { background-color: #4b4b4b; }
+.login-container a:hover {
+  background-color: #4b4b4b;
+}
 
 /*************************************************
           LOGIN SECTION ENDS HERE
@@ -389,27 +455,29 @@ select {
   margin-left: 40%;
 }
 
-.btn button:hover{
-background: gray;
-color: black;
+.btn button:hover {
+  background: gray;
+  color: black;
 }
 
 .btn button {
-  background-color: #FFF; 
-  color: black; 
-  padding: 10px 20px; 
-  border: none; 
-  cursor: pointer; 
+  background-color: #FFF;
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
   border-radius: 4px;
   border: 1px solid black;
   height: 70px;
   min-width: 200px;
 }
 
-.btn i { font-size: 22px; }
+.btn i {
+  font-size: 22px;
+}
 
 .btn h2 {
-  display: block; 
+  display: block;
   font-size: 13px;
 }
 
@@ -419,7 +487,7 @@ color: black;
 }
 
 /*small version of button*/
-.btn-small{
+.btn-small {
   display: inline;
   margin: 0 5px;
   min-width: 0;
@@ -432,21 +500,26 @@ color: black;
   height: 50px;
 }
 
-.btn-small span{
+.btn-small span {
   font-size: 13px;
   font-weight: bold;
 }
+
 /***************************************************
-                    BUTTON
+              BUTTON ENDS HERE
 ***************************************************/
 .icons {
   left: 1730px;
   margin-top: 30px;
 }
 
-#iconI,  #iconT, #iconF { margin-right: 15px; }
+#iconI,
+#iconT,
+#iconF {
+  margin-right: 15px;
+}
 
-.Lost  h1{
+.Lost h1 {
   margin-left: 150px;
   width: 600px;
 }
@@ -456,8 +529,8 @@ color: black;
   width: 600px;
 }
 
-.manage button[type="button"]
-,input[type="submit"] {
+.manage button[type="button"],
+input[type="submit"] {
   background: #000;
   border: 2px solid;
   border-radius: 7px;
@@ -468,23 +541,31 @@ color: black;
   padding: 10px 30px;
 }
 
+.city button[type="button"]:hover {
+  background-color: #6e6e6e;
+}
 
-.city button[type="button"]:hover{ background-color: #6e6e6e; }
-
-input[type="file"] { margin-top: 10px; }
+input[type="file"] {
+  margin-top: 10px;
+}
 
 
 /**********************************************
-          Create Equipment
+          CREATE EQUIPMENT ENDS HERE
 ***********************************************/
-#vin, #description {
-  height: 28px; 
+#vin,
+#description {
+  height: 28px;
   min-width: 200px;
 }
 
-.col { margin-bottom: 30px; }
+.col {
+  margin-bottom: 30px;
+}
 
-.vin { margin-right: 400px; }
+.vin {
+  margin-right: 400px;
+}
 
 #description {
   border: 1px solid black;
@@ -492,7 +573,9 @@ input[type="file"] { margin-top: 10px; }
   width: 900px;
 }
 
-#color { margin-top: 4px; }
+#color {
+  margin-top: 4px;
+}
 
 /**********************************************
           Create Equipment 
@@ -502,32 +585,26 @@ input[type="file"] { margin-top: 10px; }
               SUMMARY TABLE
 ***********************************************/
 
-#tblSummary{
-  background-color: #f5f5f5; 
+#tblSummary {
+  background-color: #f5f5f5;
   border: 1px solid black;
   border-collapse: collapse;
   margin: 10px auto;
   text-align: center;
-  width: 1060px; 
+  width: 1260px;
 }
 
-tr { border: 2px solid #000;}
+tr {
+  border: 2px solid #000;
+}
 
 #tblSummary th,
-#tblSummary td{
+#tblSummary td {
   padding: 20px 10px;
 }
 
-/**********************************************
-              SUMMARY TABLE
-***********************************************/
-
-
-/**********************************************
-              SUMMARY TABLE
-***********************************************/
 .manage-search,
-.manage-update{
+.manage-update {
   border: 1px solid black;
   background-color: #f5f5f5;
   text-align: center;
@@ -543,24 +620,208 @@ tr { border: 2px solid #000;}
 
 
 .manage-search #tblSummary th,
-.manage-search #tblSummary td{ padding: 10px; }
+.manage-search #tblSummary td {
+  padding: 10px;
+}
 
 .manage-search input,
-.manage-update input
-{
+.manage-update input {
   display: block;
   height: 30px;
   margin: 0 auto;
   width: 400px;
 }
 
-
-
-
-
 /**********************************************
               SUMMARY TABLE
 ***********************************************/
 
+/**********************************************
+              CONTEXT HELP
+***********************************************/
+.help-icon {
+  align-items: center;
+  background-color: #000;
+  border-radius: 100%;
+  cursor: pointer;
+  display: flex;
+  height: 30px;
+  justify-content: center;
+  margin-top: 5px;
+  width: 28px;
+}
+
+.icon {
+  color: #fff;
+  font-size: 20px;
+}
+
+.help-box {
+  background-color: #FFF;
+  border: 3px solid rgb(4, 98, 251);
+  border-radius: 9px;
+  box-shadow: 0 0 1px rgba(4, 98, 251);
+  display: none;
+  height: 100px;
+  right: -80px;
+  padding: 17px;
+  position: fixed;
+  top: 90px;
+  transform: translate(-50%, -50%);
+  overflow: none;
+  width: 300px;
+  z-index: 2;
+}
+
+#nextBtn,
+#skipBtn {
+  background-color: rgba(255, 255, 255, 1.0);
+  border-radius: 6px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 5px 10px;
+}
+
+.help-box p {
+  font-size: 14px;
+}
+
+.help-content {
+  margin-bottom: 10px;
+}
+
+.help-actions {
+  text-align: right;
+}
 
 
+/**********************************************
+          CONTEXT HELP ENDS HERE
+***********************************************/
+
+/**********************************************
+                  SEARCH
+***********************************************/
+
+.search-container {
+  text-align: center;
+  margin-top: 20px;
+  border: 5px solid black;
+}
+
+#search-input {
+  width: 70%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+#search-button {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+#search-button:hover {
+  background-color: #555;
+}
+
+/* Style customer details section */
+#customer-details {
+  text-align: center;
+  display: none; /* Hide by default */
+  margin-top: 20px;
+}
+
+#customer-details h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+#customer-details p {
+  font-size: 18px;
+  margin: 5px 0;
+}
+
+.sc {
+  text-align: center;
+}
+
+button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+#search-container {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+#search-input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 610px;
+}
+
+#placeholder-label {
+  position: absolute;
+  left: 580px;
+  top: 255px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  transition: all 0.3s ease;
+  color: #999;
+   /* Placeholder color */
+}
+
+#search-input:focus + #placeholder-label,
+#search-input:valid + #placeholder-label {
+  right: -32%;
+}
+/**********************************************
+              SEARCH ENDS HERE
+***********************************************/
+
+/**********************************************
+              REPAIR REQUEST FORM
+***********************************************/
+
+#datePicker {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 150px;
+  height: 20px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-equip {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 10px;
+}
+
+.man {
+  margin-top: 30px;
+}
+
+/**********************************************
+              REPAIR REQUEST FORM
+***********************************************/
